    - Add a post-base-installation hook: scripts in
      /usr/lib/post-base-installer.d/ will be run after the base system
      installation is complete. This allows locales to be created earlier,
      thereby silencing warnings from code that chroots into /target before
      prebaseconfig runs.
    - Use C-style comments in run-debootstrap.
  * Joey Hess
    - Call archdetect command instead of using template to get subarch.

 -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 18:44:17 +0100

base-installer (1.17) unstable; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Colin Watson
    - Bump kernel defaults to 2.4.27-2 and 2.6.8-2 for i386, ia64, and s390.
      hppa is still trailing behind at 2.6.8-1.
    - Use major version of target kernel rather than installation kernel to
      work out whether to use an initrd or (on powerpc) to run mkvmlinuz.
    - Parameterise access to files in /proc by kernel/*.sh, allowing the
      test suite to run without sudo access or a chroot. 'make test' in
      kernel/ should be easily runnable by everyone now.
    - If run with TEST_VERBOSE=0, the test suite produces no output except
      on errors.
    - kernel/tests/runtests and 'make test' in kernel/ exit non-zero on
      errors.
    - Run test suite automatically on package build.
    - Install kernel-latest-powerpc metapackages.
  * Matt Kraai
    - Fix the spelling of "file system".
  * Steve Langasek
    - Bump kernel defaults to 2.4.27-2 for alpha, and to 2.6.8-2 for hppa.
    - Update kernel test directory to match.
  * Sven Luther
    - 2.4.27-3 powerpc kernel now produces only one kernel-image-2.4.27-powerpc
      package, so dropped the pmac/chrp/chrp-rs6k/prep handling from
      kernel/powerpc.sh.
    - Removed mkvmlinuz explicit install, as all kernel-images (2.4.27-3,
      2.6.8-11 and 2.6.10-3) now depend on mkvmlinuz.
  * Christian Perrier
    - Remove extra space in templates. Closes: #305775
  * Frans Pop